--- a/Code/html/accueil.html
+++ b/Code/html/accueil.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <h1>Club auto</h1> <!--Titre principal du site-->
+        <h1>Club auto</h1> <!--Titre du header-->
         <div>
             <!--Div contenant l'adresse le téléphone et les horaires, permettant l'organisation du style au sein du header-->
             <div>
@@ -48,8 +48,8 @@
         </div>
     </header>
     <nav><!--barre de navigation-->
-        <ul>
-            <li>accueil</li>
+        <ul><!--liste de liens de navigation-->
+            <li>accueil</li> 
             <li>vente</li>
             <li>location</li>
             <li>contact</li>
@@ -60,77 +60,174 @@
             <img src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/vehicule1.jpg"
                 alt="Voitures de présentées les unes dérrière les autres">
         </picture>
-        <h1>Club auto <span>Le meilleur de l'automobile</span></h1>
-    </section>
-    <div><!--Div contenenant l'article de présentation n°1-->
-        <picture>
-            <img src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/clients.jpg">
-        </picture>
-        <h1>Bienvenue chez <span>Club auto</span></h1>
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum adipisci architecto labore! Dolor quidem
-            molestiae, labore quibusdam sequi adipisci facere.</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus omnis voluptatibus quod incidunt
-            voluptatem
-            saepe libero soluta possimus! Quis vitae, autem enim cumque ratione quibusdam error quidem dolor porro, est
-            ipsa
-            aperiam! Iusto, deserunt aliquid itaque error temporibus a provident voluptatum molestias fuga? Nobis,
-            facere sunt
-            exercitationem adipisci asperiores impedit.</p>
-    </div>
-    <div><!--Div contenenant l'article de présentation n°2-->
-        <h1>Le meilleur de l'automobile</h1>
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse praesentium quidem iure nobis debitis eius
-            incidunt
-            repellat iste minima, exercitationem velit vel error veniam impedit dolore nulla fugit alias quo temporibus?
-            Libero quasi, eius veniam in magnam itaque laudantium porro saepe dolorem laborum amet ut nam ab aliquid?
-            Impedit,
-            et.</p>
-        <ul>
-            <li>Lorem ipsum dolor sit amet.</li>
-            <li>Lorem ipsum dolor sit amet.</li>
-            <li>Lorem ipsum dolor sit amet.</li>
-            <li>Lorem ipsum dolor sit amet.</li>
-            <li>Lorem ipsum dolor sit amet.</li>
-        </ul>
-        <picture>
-            <img src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/entretien.jpg">
-        </picture>
-    </div>
-    <div><!--Div contenant un bouton pour la page de vente et un pour la page de location-->
-        <div><!--bouton d'achat-->
-            <h1>Vous souhaitez louer ?</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et cupiditate, aliquam aliquid eius suscipit
-                optio
-                impedit delectus distinctio a inventore numquam qui architecto enim quaerat ex voluptatum officiis
-                repellendus
-                ipsa voluptates laudantium dolores vitae sapiente.</p>
+        <h1>Club auto <span>Le meilleur de l'automobile</span></h1><!--titre en dessous de la banière photo-->
+        <div><!--Div contenenant l'article de présentation n°1-->
+            <picture><!--image située à gauche de la présentation-->
+                <img src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/clients.jpg">
+            </picture>
+            <h1>Bienvenue chez <span>Club auto</span></h1><!--titre et texte pour la présentation n°1-->
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum adipisci architecto labore! Dolor
+                quidem
+                molestiae, labore quibusdam sequi adipisci facere.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus omnis voluptatibus quod incidunt
+                voluptatem
+                saepe libero soluta possimus! Quis vitae, autem enim cumque ratione quibusdam error quidem dolor porro,
+                est
+                ipsa
+                aperiam! Iusto, deserunt aliquid itaque error temporibus a provident voluptatum molestias fuga? Nobis,
+                facere sunt
+                exercitationem adipisci asperiores impedit.</p>
         </div>
-        <div><!--bouton de vente-->
-            <h1>Vous souhaitez acheter ?</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et cupiditate, aliquam aliquid eius suscipit
-                optio
-                impedit delectus distinctio a inventore numquam qui architecto enim quaerat ex voluptatum officiis
-                repellendus
-                ipsa voluptates laudantium dolores vitae sapiente.</p>
+        <div><!--Div contenenant l'article de présentation n°2-->
+            <h1>Le meilleur de l'automobile</h1><!--titre et texte pour la présentation n°2-->
+            <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse praesentium quidem iure nobis debitis eius
+                incidunt
+                repellat iste minima, exercitationem velit vel error veniam impedit dolore nulla fugit alias quo
+                temporibus?
+                Libero quasi, eius veniam in magnam itaque laudantium porro saepe dolorem laborum amet ut nam ab
+                aliquid?
+                Impedit,
+                et.</p>
+            <ul><!--liste des points forts de l'entreprise-->
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem ipsum dolor sit amet.</li>
+            </ul>
+            <picture><!--image située à droite de la présentation n°2-->
+                <img src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/entretien.jpg">
+            </picture>
         </div>
-    </div>
-    <div><!--Div vehicules recents, bannière défilante avec les vehcules disponibles-->
-        <h1>Vehicules recents</h1>
-        <br>
-        <div>
+        <div><!--Div contenant un bouton pour la page de vente et un pour la page de location-->
+            <div><!--bouton d'achat-->
+                <h1>Vous souhaitez louer ?</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et cupiditate, aliquam aliquid eius suscipit
+                    optio
+                    impedit delectus distinctio a inventore numquam qui architecto enim quaerat ex voluptatum officiis
+                    repellendus
+                    ipsa voluptates laudantium dolores vitae sapiente.</p>
+            </div>
+            <div><!--bouton de vente-->
+                <h1>Vous souhaitez acheter ?</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et cupiditate, aliquam aliquid eius suscipit
+                    optio
+                    impedit delectus distinctio a inventore numquam qui architecto enim quaerat ex voluptatum officiis
+                    repellendus
+                    ipsa voluptates laudantium dolores vitae sapiente.</p>
+            </div>
+        </div>
+        <div><!--Div vehicules recents, bannière défilante avec les vehcules disponibles-->
+            <h1>Vehicules recents</h1><!--titre de la section-->
+            <br>
             <ul>
-                <li><img
-                        src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/vehicule2.jpg">
+                <li>
+                    <a href=""><!--ancre contenant l'annonce du véhicule avec son prix et sa description-->
+                        <img
+                            src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/vehicule2.jpg">
+                        <h1><strong>BMW 535I, NAVI, LEATHER, ABS</strong></h1><!--marque et modèle du véhicule-->
+                        <p>5 500 €</p><!--prix du véhicule-->
+                    </a>
                 </li>
-                <li><img
-                        src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/vehicule2.jpg">
+                <li>
+                    <a href=""><!--ancre contenant l'annonce du véhicule avec son prix et sa description-->
+                        <img
+                            src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/vehicule2.jpg">
+                        <h1><strong>BMW 328I, SPORT LINE BODY KIT</strong></h1><!--marque et modèle du véhicule-->
+                        <p>8 000 €</p><!--prix du véhicule-->
+                    </a>
                 </li>
-                <li><img
-                        src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/vehicule2.jpg">
+                <li>
+                    <a href=""><!--ancre contenant l'annonce du véhicule avec son prix et sa description-->
+                        <img
+                            src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/vehicule2.jpg">
+                        <h1><strong>FORD EXPLORER 2015 4WD</strong></h1><!--marque et modèle du véhicule-->
+                        <p>9 000 €</p><!--prix barré-->
+                        <p>8 200 €</p><!--prix du véhicule-->
+                    </a>
                 </li>
             </ul>
         </div>
-    </div>
+        <div><!--Div contenant les différentes qualités de l'entreprise-->
+            <h1>Pourquoi nous choisir ?</h1>
+            <div><!--div contenant les quatres div correspondantes à chaque qualité de l'entreprise-->
+                <div><!--div contenant le logo et le texte-->
+                    <img src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/icon1.png">
+                    <h2>Financement</h2><!--énoncé de la qualité-->
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut numquam eum sit quia, eveniet
+                        excepturi voluptates dolores porro voluptatem quaerat.</p>
+                </div>
+                <div><!--div contenant le logo et le texte-->
+                    <img src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/icon2.png">
+                    <h2>Réactivité de l'équipe technique</h2><!--énoncé de la qualité-->
+                    <p>Nihil laboriosam eligendi, odit, fugiat quae doloremque excepturi hic placeat nisi temporibus
+                        maxime aspernatur! Nam nulla dicta odio id itaque.</p>
+                </div>
+                <div><!--div contenant le logo et le texte-->
+                    <img src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/icon3.png">
+                    <h2>A l'écoute de notre clientèle</h2><!--énoncé de la qualité-->
+                    <p>Assumenda veniam minus ex ullam? Recusandae tempore nihil doloribus at amet, ea earum qui eos
+                        ullam, est pariatur sint harum?</p>
+                </div>
+                <div><!--div contenant le logo et le texte-->
+                    <img src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/icon4.png">
+                    <h2>Service & maintenance</h2><!--énoncé de la qualité-->
+                    <p>Quo aspernatur non nemo quidem voluptate praesentium velit atque eum, error asperiores nesciunt
+                        provident magnam reiciendis beatae alias amet voluptatum?</p>
+                </div>
+            </div>
+            <button>CONTACTEZ NOUS</button><!--CTA de contact-->
+        </div>
+        <div><!--Div d'une bannière de présentation de l'entreprise-->
+            <div><!--Div contenant le texte de la banière-->
+                <h1>Club auto</h1>
+                <h2>Vente et location</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic voluptatum id in modi iste aspernatur,
+                    rem laudantium nam maxime, voluptates voluptas! Voluptatibus soluta nostrum debitis assumenda error.
+                    Quaerat, rem iure.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div><!--Div infos du footer-->
+            <div>
+                <h1>CLUB<span>AUTO</span></h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae reiciendis accusamus tenetur
+                    perspiciatis impedit facilis vero culpa hic corporis soluta.</p>
+            </div>
+            <div>
+                <h1>horaire d'ouverture</h1><!--encadré des horaires-->
+                <p>Lundi - Samedi :<span>9:00 - 17:00</span></p>
+                <p>Dimanche et jours fériés :<span>Fermé</span></p>
+            </div>
+            <div><!--div contenant l'input et le texte de la newsletter-->
+                <h1>newsletter</h1>
+                <div><!--input email newsletter-->
+                    <input type="email">
+                    <button><i class="fa-solid fa-rss" style="color: #ffffff;"></i></button>
+                </div>
+                <p>Inscrivez-vous pour recevoir les dernières offres</p>
+            </div>
+            <div><!--div titre + links-->
+                <h1>reseaux sociaux</h1>
+                <div><!--div container social media links-->
+                    <ul><!--liste des liens social media-->
+                        <li><a href=""><i class="fa-brands fa-square-facebook" style="color: #000000;"></i></a></li>
+                        <li><a href=""></a><i class="fa-brands fa-square-twitter" style="color: #000000;"></i></a></li>
+                        <li><a href=""></a><i class="fa-brands fa-square-instagram" style="color: #000000;"></i></a>
+                        </li>
+                        <li><a href=""></a><i class="fa-brands fa-square-google-plus" style="color: #000000;"></i></a>
+                        </li>
+                        <li><a href=""></a><i class="fa-brands fa-square-youtube" style="color: #000000;"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div><!--div copyright etc..-->
+            <p>Copyright &#169 Club Auto - Tous droits réservés</p>
+        </div>
+    </footer>
 </body>
+
 </html>
