continuation hmtl css + ajout commentaire

--- a/Code/html/accueil.html
+++ b/Code/html/accueil.html
@@ -76,16 +76,16 @@
             </div>
         <div class="articleMainCtr">
             <div class="articleMain col-9"><!--Div contenenant l'article de présentation n°1-->
-                <div>
-                    <picture><!--image située à gauche de la présentation-->
+                    <div class="articleImg"><!--image située à gauche de la présentation-->
                         <img src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/clients.jpg">
-                    </picture>
-                </div>
+                    </div>
                 <div class="articleText">
                     <h1>Bienvenue chez <span class="texteOrange">Club auto</span></h1><!--titre et texte pour la présentation n°1-->
+                    <br>
                     <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum adipisci architecto labore! Dolor
                         quidem
-                        molestiae, labore quibusdam sequi adipisci facere.</h2>
+                    </h2>
+                    <br>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus omnis voluptatibus quod incidunt
                         voluptatem
                         saepe libero soluta possimus! Quis vitae, autem enim cumque ratione quibusdam error quidem dolor porro,
@@ -99,7 +99,7 @@
             <div class="articleMain col-9"><!--Div contenenant l'article de présentation n°2-->
                 <div class="articleText">
                     <h1>Le meilleur de l'automobile</h1><!--titre et texte pour la présentation n°2-->
-                    <br>
+                    <br class="breakArticle">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse praesentium quidem iure nobis debitis eius
                         incidunt
                         repellat iste minima, exercitationem velit vel error veniam impedit dolore nulla fugit alias quo
@@ -107,7 +107,9 @@
                         Libero quasi, eius veniam in magnam itaque laudantium porro saepe dolorem laborum amet ut nam ab
                         aliquid?
                         Impedit,
-                        et.</p>
+                        et.
+                    </p>
+                    <br>
                     <ul><!--liste des points forts de l'entreprise-->
                         <li>Lorem ipsum dolor sit amet.</li>
                         <li>Lorem ipsum dolor sit amet.</li>
@@ -116,27 +118,31 @@
                         <li>Lorem ipsum dolor sit amet.</li>
                     </ul>
                 </div>
-                <picture><!--image située à droite de la présentation n°2-->
+                <div class="articleImg"><!--image située à droite de la présentation n°2-->
                     <img src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/entretien.jpg">
-                </picture>
+                </div>
             </div>
         </div> 
-        <div><!--Div contenant un bouton pour la page de vente et un pour la page de location-->
-            <div><!--bouton d'achat-->
-                <h1>Vous souhaitez louer ?</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et cupiditate, aliquam aliquid eius suscipit
-                    optio
-                    impedit delectus distinctio a inventore numquam qui architecto enim quaerat ex voluptatum officiis
-                    repellendus
-                    ipsa voluptates laudantium dolores vitae sapiente.</p>
-            </div>
-            <div><!--bouton de vente-->
-                <h1>Vous souhaitez acheter ?</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et cupiditate, aliquam aliquid eius suscipit
-                    optio
-                    impedit delectus distinctio a inventore numquam qui architecto enim quaerat ex voluptatum officiis
-                    repellendus
-                    ipsa voluptates laudantium dolores vitae sapiente.</p>
+        <div class="frameCtrBg"><!--Div contenant un bouton pour la page de vente et un pour la page de location-->
+            <div class="frameCtr col-8">
+                <div class="achatFrame bgLoca"><!--bouton de loca-->
+                    <h2>Vous souhaitez louer ?</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et cupiditate, aliquam aliquid eius suscipit
+                        optio
+                        impedit delectus distinctio a inventore numquam qui architecto enim quaerat ex voluptatum officiis
+                        repellendus
+                        ipsa voluptates laudantium dolores vitae sapiente.
+                    </p>
+                </div>
+                <div class="achatFrame bgBuy"><!--bouton d'achat-->
+                    <h2>Vous souhaitez acheter ?</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et cupiditate, aliquam aliquid eius suscipit
+                        optio
+                        impedit delectus distinctio a inventore numquam qui architecto enim quaerat ex voluptatum officiis
+                        repellendus
+                        ipsa voluptates laudantium dolores vitae sapiente.
+                    </p>
+                </div>
             </div>
         </div>
         <div><!--Div vehicules recents, bannière défilante avec les vehcules disponibles-->
