--- a/Code/html/accueil.html
+++ b/Code/html/accueil.html
@@ -9,7 +9,7 @@
     <!--Début import des polices google-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Open+Sans:wght@500&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@500&display=swap"
         rel="stylesheet">
     <!--Fin import des polices google-->
     <!--script permettant l'import d'icone via le site Fontawesome-->
@@ -74,8 +74,8 @@
                     <h1 class="col-9">Club auto <span class="texteOrange">Le meilleur de l'automobile</span></h1><!--titre en dessous de la banière photo-->
                 </div>  
             </div>
-        <div class="articleMainCtr">
-            <div class="articleMain col-9"><!--Div contenenant l'article de présentation n°1-->
+        <article class="articleMainCtr">
+            <div class="articleMain col-7"><!--Div contenenant l'article de présentation n°1-->
                     <div class="articleImg"><!--image située à gauche de la présentation-->
                         <img src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/clients.jpg">
                     </div>
@@ -86,17 +86,10 @@
                         quidem
                     </h2>
                     <br>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus omnis voluptatibus quod incidunt
-                        voluptatem
-                        saepe libero soluta possimus! Quis vitae, autem enim cumque ratione quibusdam error quidem dolor porro,
-                        est
-                        ipsa
-                        aperiam! Iusto, deserunt aliquid itaque error temporibus a provident voluptatum molestias fuga? Nobis,
-                        facere sunt
-                        exercitationem adipisci asperiores impedit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos sed voluptates rem quod, numquam reiciendis nulla a neque inventore impedit id dolor repellat accusamus vel debitis, fugit temporibus veritatis, repudiandae voluptatum expedita eum? Iste optio ipsam fugit ullam dolor voluptatem repellendus veritatis, eos soluta harum amet, laudantium dolorem expedita minima possimus error ut, nisi facere! Libero placeat sint officia eligendi?</p>
                 </div>
             </div>
-            <div class="articleMain col-9"><!--Div contenenant l'article de présentation n°2-->
+            <div class="articleMain col-7"><!--Div contenenant l'article de présentation n°2-->
                 <div class="articleText">
                     <h1>Le meilleur de l'automobile</h1><!--titre et texte pour la présentation n°2-->
                     <br class="breakArticle">
@@ -122,7 +115,7 @@
                     <img src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/entretien.jpg">
                 </div>
             </div>
-        </div> 
+        </article> 
         <div class="frameCtrBg"><!--Div contenant un bouton pour la page de vente et un pour la page de location-->
             <div class="frameCtr col-8">
                 <div class="achatFrame bgLoca"><!--bouton de loca-->
@@ -145,36 +138,40 @@
                 </div>
             </div>
         </div>
-        <div><!--Div vehicules recents, bannière défilante avec les vehcules disponibles-->
-            <h1>Vehicules recents</h1><!--titre de la section-->
-            <br>
-            <ul>
-                <li>
-                    <a href=""><!--ancre contenant l'annonce du véhicule avec son prix et sa description-->
-                        <img
-                            src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/vehicule2.jpg">
-                        <h1><strong>BMW 535I, NAVI, LEATHER, ABS</strong></h1><!--marque et modèle du véhicule-->
-                        <p>5 500 €</p><!--prix du véhicule-->
-                    </a>
-                </li>
-                <li>
-                    <a href=""><!--ancre contenant l'annonce du véhicule avec son prix et sa description-->
-                        <img
-                            src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/vehicule2.jpg">
-                        <h1><strong>BMW 328I, SPORT LINE BODY KIT</strong></h1><!--marque et modèle du véhicule-->
-                        <p>8 000 €</p><!--prix du véhicule-->
-                    </a>
-                </li>
-                <li>
-                    <a href=""><!--ancre contenant l'annonce du véhicule avec son prix et sa description-->
-                        <img
-                            src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/vehicule2.jpg">
-                        <h1><strong>FORD EXPLORER 2015 4WD</strong></h1><!--marque et modèle du véhicule-->
-                        <p>9 000 €</p><!--prix barré-->
-                        <p>8 200 €</p><!--prix du véhicule-->
-                    </a>
-                </li>
-            </ul>
+        <div class="vehiculeRecentCtr"><!--Div vehicules recents, bannière défilante avec les vehcules disponibles-->
+            <h1 class="vehiculeRecentTitle col-9">Vehicules recents</h1><!--titre de la section-->
+                <ul class="col-9">
+                    <li>
+                        <a href=""><!--ancre contenant l'annonce du véhicule avec son prix et sa description-->
+                            <img
+                                src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/vehicule2.jpg">
+                            <div>
+                                <h1><strong>BMW 535I, NAVI, LEATHER, ABS</strong></h1><!--marque et modèle du véhicule-->
+                                <h2>5 500 €</h2><!--prix du véhicule-->
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><!--ancre contenant l'annonce du véhicule avec son prix et sa description-->
+                            <img
+                                src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/vehicule2.jpg">
+                            <div>
+                                <h1><strong>BMW 328I, SPORT LINE BODY KIT</strong></h1><!--marque et modèle du véhicule-->
+                                <h2>8 000 €</h2><!--prix du véhicule-->
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><!--ancre contenant l'annonce du véhicule avec son prix et sa description-->
+                            <img
+                                src="../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/vehicule2.jpg">
+                            <div>
+                                <h1><strong>FORD EXPLORER 2015 4WD</strong></h1><!--marque et modèle du véhicule-->
+                                <h2><span>9 000 €<!--prix barré--></span>8 200 €</h2><!--prix du véhicule-->
+                            </div>
+                        </a>
+                    </li>
+                </ul>
         </div>
         <div><!--Div contenant les différentes qualités de l'entreprise-->
             <h1>Pourquoi nous choisir ?</h1>
