page vehiculeDetails créée et terminée / manque une relecture et quelques finitions

--- a/Code/html/accueil.html
+++ b/Code/html/accueil.html
@@ -57,7 +57,7 @@
             </div>
         </div>
     </header>
-    <nav><!--barre de navigation-->
+    <nav class="sourceNav"><!--barre de navigation-->
         <ul><!--liste de liens de navigation-->
             <li><a href="">accueil</a></li>
             <li><a href="">vente</a></li>
