--- a/Code/html/vehiculeDetails.html
+++ b/Code/html/vehiculeDetails.html
@@ -9,7 +9,7 @@
     <!--Début import des polices google-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Open+Sans:wght@500&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@500&display=swap"
         rel="stylesheet">
     <!--Fin import des polices google-->
     <!--script permettant l'import d'icone via le site Fontawesome-->
@@ -57,7 +57,7 @@
             </div>
         </div>
     </header>
-    <nav class="sourceNav"><!--barre de navigation-->
+    <nav class="navVehicule"><!--barre de navigation-->
         <ul><!--liste de liens de navigation-->
             <li><a href="">accueil</a></li>
             <li><a href="">vente</a></li>
@@ -65,37 +65,33 @@
             <li><a href="">contact</a></li>
         </ul>
     </nav>
-    <section class="contactSection">
-        <div class="formBg">
-            <div class="formCtr">
-                <h1>Contactez-nous</h1>
-                <div class="formInfo">
-                    <div class="prenomMail">
-                        <div class="formLine">
-                            <label for="nom">Prénom*</label>
-                            <input type="text" name="prenom" placeholder="Entrez votre prénom" required>
-                        </div>
-                        <div class="formLine">
-                            <label for="nom">Email*</label>
-                            <input type="mail" name="email" placeholder="Entrez une adresse mail valide" required>
-                        </div>
-                    </div>
-                    <div class="nomTel">
-                        <div class="formLine">
-                            <label for="nom">Nom*</label>
-                            <input type="text" name="nom" placeholder="Entrez votre nom" required>
-                        </div>
-                        <div class="formLine">
-                            <label for="nom">Téléphone</label>
-                            <input type="tel" name="telephone" placeholder="Phone number">
-                        </div>
-                    </div>
-                    <div class="formMessage">
-                        <label for="message">Message</label>
-                        <textarea name="message" cols="30" rows="5" placeholder="Ecrivez votre message"></textarea>
-                        <button>ENVOYEZ</button>
-                    </div>
-                </div>
+    <section class="col-7"><!--Bannière de haut de page avec une image et un titre-->
+        <div class="vehiculeSection">
+            <p>ACCUEIL / VENTE / Bmw 535i, Navi, Leather, ABS</p>
+            <div class="vehiculeSectionTitle">
+                <h1>Bmw 535i, Navi, Leather, ABS</h1>
+                <img src="/Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/vehicule2.jpg" alt="">
+            </div>
+            <div class="vehiculeSectionNav">
+                <a href="">DESCRIPTION</a>
+                <a href="">TECHNIQUE</a>
+                <a href="">OPTIONS</a>
+                <a href="">CONTACT</a>
+            </div>
+            <div class="vehiculeSectionText">
+                <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda labore id repellendus, blanditiis tenetur vel delectus repudiandae quibusdam minus totam.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae temporibus perferendis quibusdam natus omnis repellat quod necessitatibus vero, fugiat reprehenderit dignissimos, velit, possimus aperiam! Obcaecati provident vitae libero dolor laudantium omnis harum hic, numquam fugit nobis maiores eos at praesentium aliquid doloremque quaerat sapiente molestias porro sit. Dicta commodi consequatur nulla optio libero placeat a esse dolorem, consectetur perferendis, dolore saepe, mollitia cumque numquam illum distinctio veniam ea cum vero eaque. Cumque saepe explicabo architecto totam? Cupiditate nobis libero ipsa in ipsum, alias doloremque. Laudantium debitis, reiciendis libero ratione sapiente quis, totam, inventore id accusantium autem quia assumenda quae perferendis.</p>
+                <em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa consequuntur nihil, perferendis possimus minima aliquam?</em>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur provident dolorum quae eius corporis, maxime dignissimos veniam rerum placeat repellat corrupti nihil quibusdam, molestiae neque distinctio voluptatem eos ut, laudantium molestias? Nemo quos maiores optio illum necessitatibus et iure non!</p>
+            </div>
+            <div class="vehiculeSectionOptions">
+                <h2>OPTIONS</h2>
+                <ul>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                </ul>
             </div>
         </div>
     </section>
