--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <img 
                     src="/images/vehicule1.jpg" alt="Voitures de présentées les unes dérrière les autres">
                 <div class="sectionTitle">
-                    <h1 class="col-9">Club auto <span class="texteOrange">Le meilleur de l'automobile</span></h1><!--titre en dessous de la banière photo-->
+                    <h2 class="col-9">Club auto <span class="texteOrange">Le meilleur de l'automobile</span></h2><!--titre en dessous de la banière photo-->
                 </div>  
             </div>
         <article class="articleMainCtr">
@@ -78,18 +78,18 @@
                         <img src="/images/clients.jpg" alt="image de clients satisfaits">
                     </div>
                 <div class="articleText">
-                    <h1>Bienvenue chez <span class="texteOrange">Club auto</span></h1><!--titre et texte pour la présentation n°1-->
+                    <h2>Bienvenue chez <span class="texteOrange">Club auto</span></h2><!--titre et texte pour la présentation n°1-->
                     <br>
-                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum adipisci architecto labore! Dolor
+                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum adipisci architecto labore! Dolor
                         quidem
-                    </h2>
+                    </h3>
                     <br>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos sed voluptates rem quod, numquam reiciendis nulla a neque inventore impedit id dolor repellat accusamus vel debitis, fugit temporibus veritatis, repudiandae voluptatum expedita eum? Iste optio ipsam fugit ullam dolor voluptatem repellendus veritatis, eos soluta harum amet, laudantium dolorem expedita minima possimus error ut, nisi facere! Libero placeat sint officia eligendi?</p>
                 </div>
             </div>
             <div class="articleMain col-7"><!--Div contenenant l'article de présentation n°2-->
                 <div class="articleText">
-                    <h1 class="underline">Le meilleur de l'automobile</h1><!--titre et texte pour la présentation n°2-->
+                    <h2 class="underline">Le meilleur de l'automobile</h2><!--titre et texte pour la présentation n°2-->
                     <br>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse praesentium quidem iure nobis debitis eius
                         incidunt
@@ -137,15 +137,15 @@
             </div>
         </div>
         <div class="vehiculeRecentCtr"><!--Div vehicules recents, bannière défilante avec les vehcules disponibles-->
-            <h1 class="vehiculeRecentTitle col-9">Vehicules recents</h1><!--titre de la section-->
+            <h2 class="vehiculeRecentTitle col-9">Vehicules recents</h2><!--titre de la section-->
                 <ul class="col-9">
                     <li>
                         <a href=""><!--ancre contenant l'annonce du véhicule avec son prix et sa description-->
                             <img
                                 src="/images/vehicule2.jpg" alt="Belle voiture devant un paysage">
                             <div>
-                                <h1><strong>BMW 535I, NAVI, LEATHER, ABS</strong></h1><!--marque et modèle du véhicule-->
-                                <h2>5 500 €</h2><!--prix du véhicule-->
+                                <h3><strong>BMW 535I, NAVI, LEATHER, ABS</strong></h3><!--marque et modèle du véhicule-->
+                                <p>5 500 €</p><!--prix du véhicule-->
                                 <span class="underlineVehicule"></span>
                             </div>
                         </a>
@@ -155,8 +155,8 @@
                             <img
                                 src="/images/vehicule2.jpg" alt="Belle voiture devant un paysage">
                             <div>
-                                <h1><strong>BMW 328I, SPORT LINE BODY KIT</strong></h1><!--marque et modèle du véhicule-->
-                                <h2>8 000 €</h2><!--prix du véhicule-->
+                                <h3><strong>BMW 328I, SPORT LINE BODY KIT</strong></h3><!--marque et modèle du véhicule-->
+                                <p>8 000 €</p><!--prix du véhicule-->
                                 <span class="underlineVehicule"></span>
                             </div>
                         </a>
@@ -166,8 +166,8 @@
                             <img
                                 src="/images/vehicule2.jpg" alt="Belle voiture devant un paysage">
                             <div>
-                                <h1><strong>FORD EXPLORER 2015 4WD</strong></h1><!--marque et modèle du véhicule-->
-                                <h2><span>9 000 €<!--prix barré--></span>8 200 €</h2><!--prix du véhicule-->
+                                <h3><strong>FORD EXPLORER 2015 4WD</strong></h3><!--marque et modèle du véhicule-->
+                                <p><span>9 000 €<!--prix barré--></span>8 200 €</p><!--prix du véhicule-->
                                 <span class="underlineVehicule"></span>
                             </div>
                         </a>
@@ -175,12 +175,12 @@
                 </ul>
         </div>
         <div class="nosQualiteCtr"><!--Div contenant les différentes qualités de l'entreprise-->
-            <h1>Pourquoi nous choisir ?</h1>
+            <h2>Pourquoi nous choisir ?</h2>
             <div class="lesQuatresQualitesCtr col-11"><!--div contenant les quatres div correspondantes à chaque qualité de l'entreprise-->
                 <div class="qualiteUnique"><!--div contenant le logo et le texte-->
                     <img src="/images/icon1.png" alt="icone représentant une qualité se l'entreprise">
                     <div>
-                        <h2>Financement</h2><!--énoncé de la qualité-->
+                        <h3>Financement</h3><!--énoncé de la qualité-->
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut numquam eum sit quia, eveniet
                         excepturi voluptates dolores porro voluptatem quaerat.</p>
                     </div>
@@ -188,7 +188,7 @@
                 <div class="qualiteUnique"><!--div contenant le logo et le texte-->
                     <img src="/images/icon2.png" alt="icone représentant une qualité se l'entreprise">
                     <div>
-                        <h2>Réactivité de l'équipe technique</h2><!--énoncé de la qualité-->
+                        <h3>Réactivité de l'équipe technique</h3><!--énoncé de la qualité-->
                         <p>Nihil laboriosam eligendi, odit, fugiat quae doloremque excepturi hic placeat nisi temporibus
                         maxime aspernatur! Nam nulla dicta odio id itaque.</p>
                     </div>
@@ -196,7 +196,7 @@
                 <div class="qualiteUnique"><!--div contenant le logo et le texte-->
                     <img src="/images/icon3.png" alt="icone représentant une qualité se l'entreprise">
                     <div>
-                        <h2>A l'écoute de notre clientèle</h2><!--énoncé de la qualité-->
+                        <h3>A l'écoute de notre clientèle</h3><!--énoncé de la qualité-->
                         <p>Assumenda veniam minus ex ullam? Recusandae tempore nihil doloribus at amet, ea earum qui eos
                         ullam, est pariatur sint harum?</p>
                     </div>
@@ -204,7 +204,7 @@
                 <div class="qualiteUnique"><!--div contenant le logo et le texte-->
                     <img src="/images/icon4.png" alt="icone représentant une qualité se l'entreprise">
                     <div>
-                        <h2>Service & maintenance</h2><!--énoncé de la qualité-->
+                        <h3>Service & maintenance</h3><!--énoncé de la qualité-->
                         <p>Quo aspernatur non nemo quidem voluptate praesentium velit atque eum, error asperiores nesciunt
                         provident magnam reiciendis beatae alias amet voluptatum?</p>
                     </div>
@@ -215,8 +215,8 @@
         <div class="banniereVenteEtLocaCtr"><!--Div d'une bannière de présentation de l'entreprise-->
             <div class="achatFrame bgJaune"><!--Div contenant le texte de la banière-->
                 <div>
-                    <h1>Club auto</h1>
-                    <h2>Vente et location</h2>
+                    <h2>Club auto</h2>
+                    <h3>Vente et location</h3>
                 </div>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic voluptatum id in modi iste aspernatur,
                     rem laudantium nam maxime, voluptates voluptas! Voluptatibus soluta nostrum</p>
@@ -226,19 +226,19 @@
     <footer>
         <div class="col-9"><!--Div infos du footer-->
             <div class="footerInfo presentation">
-                <h1>CLUB <span>AUTO</span></h1>
+                <h2>CLUB <span>AUTO</span></h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae reiciendis accusamus tenetur
                     perspiciatis impedit facilis vero culpa hic corporis soluta.</p>
             </div>
             <div class="footerInfo footerHoraire"> 
-                <h1>horaire d'ouverture</h1><!--encadré des horaires-->
+                <h2>horaire d'ouverture</h2><!--encadré des horaires-->
                 <div>
                     <p><span>Lundi - Samedi : </span>9:00 - 17:00</p>
                     <p><span>Dimanche et jours fériés : </span>Fermé</p>
                 </div>
             </div>
             <div class="footerInfo newsletter"><!--div contenant l'input et le texte de la newsletter-->
-                <h1>newsletter</h1>
+                <h2>newsletter</h2>
                 <div><!--input email newsletter-->
                     <input type="email" placeholder="Entrez votre email">
                     <button><i class="fa-solid fa-rss" style="color: #ffffff;"></i></button>
@@ -246,7 +246,7 @@
                 <p>Inscrivez-vous pour recevoir les dernières offres</p>
             </div>
             <div class="footerInfo footerSocial"><!--div titre + links-->
-                <h1>reseaux sociaux</h1>
+                <h2>reseaux sociaux</h2>
                 <!--div Ctr social media links-->
                 <!--liste des liens social media-->
                 <div>
