--- a/vehiculeDetails.html
+++ b/vehiculeDetails.html
@@ -3,13 +3,12 @@
 
 <head>
     <meta charset="utf-8">
-    </meta>
     <title>CLUB AUTO</title>
     <link rel="stylesheet" href="/styles/style.css">
     <!--Début import des polices google-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@500&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Open+Sans:wght@500&display=swap"
         rel="stylesheet">
     <!--Fin import des polices google-->
     <!--script permettant l'import d'icone via le site Fontawesome-->
@@ -67,24 +66,24 @@
     </nav>
     <section class="col-7"><!--Bannière de haut de page avec une image et un titre-->
         <div class="vehiculeSection">
-            <p>ACCUEIL / VENTE / Bmw 535i, Navi, Leather, ABS</p>
+            <p>ACCUEIL / VENTE / Bmw 535i, Navi, Leather, ABS</p><!--Url du catalogue de vente-->
             <div class="vehiculeSectionTitle">
-                <h2>Bmw 535i, Navi, Leather, ABS</h2>
+                <h2>Bmw 535i, Navi, Leather, ABS</h2><!-- marque et modèle u véhicule-->
                 <img src="/images/vehicule2.jpg" alt="Belle voiture présentée devant un paysage">
             </div>
-            <div class="vehiculeSectionNav">
-                <a href="">DESCRIPTION</a>
-                <a href="">TECHNIQUE</a>
-                <a href="">OPTIONS</a>
-                <a href="">CONTACT</a>
+            <div class="vehiculeSectionNav"><!--contient les liens permettant de naviguer entre les infos de la voiture-->
+                <a>DESCRIPTION</a><!--manque JS pour dynamiser-->
+                <a>TECHNIQUE</a>
+                <a>OPTIONS</a>
+                <a>CONTACT</a>
             </div>
-            <div class="vehiculeSectionText">
+            <div class="vehiculeSectionText"><!--contient le titre et les textes de la description-->
                 <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda labore id repellendus, blanditiis tenetur vel delectus repudiandae quibusdam minus totam.</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae temporibus perferendis quibusdam natus omnis repellat quod necessitatibus vero, fugiat reprehenderit dignissimos, velit, possimus aperiam! Obcaecati provident vitae libero dolor laudantium omnis harum hic, numquam fugit nobis maiores eos at praesentium aliquid doloremque quaerat sapiente molestias porro sit. Dicta commodi consequatur nulla optio libero placeat a esse dolorem, consectetur perferendis, dolore saepe, mollitia cumque numquam illum distinctio veniam ea cum vero eaque. Cumque saepe explicabo architecto totam? Cupiditate nobis libero ipsa in ipsum, alias doloremque. Laudantium debitis, reiciendis libero ratione sapiente quis, totam, inventore id accusantium autem quia assumenda quae perferendis.</p>
                 <em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa consequuntur nihil, perferendis possimus minima aliquam?</em>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur provident dolorum quae eius corporis, maxime dignissimos veniam rerum placeat repellat corrupti nihil quibusdam, molestiae neque distinctio voluptatem eos ut, laudantium molestias? Nemo quos maiores optio illum necessitatibus et iure non!</p>
             </div>
-            <div class="vehiculeSectionOptions">
+            <div class="vehiculeSectionOptions"><!--liste avec du texte-->
                 <h2>OPTIONS</h2>
                 <ul>
                     <li>Lorem ipsum dolor sit amet.</li>
