--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--Début import des polices google-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@500&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Open+Sans:wght@500&display=swap"
         rel="stylesheet">
     <!--Fin import des polices google-->
     <!--script permettant l'import d'icone via le site Fontawesome-->
